# ca-playground

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: cpm.cmake
src/: CMakeLists.txt  main.cpp
src/rules/: CMakeLists.txt
src/rules/include/rules/: conway.h  rules_interface.h
src/rules/src/: conway.cpp  rules_interface.cpp
src/viewer/: CMakeLists.txt
src/viewer/include/viewer/: graphics_viewer.h  terminal_viewer.h  viewer.h
src/viewer/src/: graphics_viewer.cpp  terminal_viewer.cpp  viewer.cpp
